added basic message statistics to agent wrapper, incl. ci trigger rate and msg fraction sent. Also implemented updating agent ci trigger rate

--- a/python/offset_ros/CMakeLists.txt
+++ b/python/offset_ros/CMakeLists.txt
@@ -53,6 +53,7 @@ add_message_files(
     AgentMeasurement.msg
     gpsMeasurement.msg
     linrelMeasurement.msg
+    MsgStats.msg
 )
 
 ## Generate services in the 'srv' folder
