3d ncv estimation working, tested with coplanar motion

--- a/python/offset_ros/config/ros_agent_config.yaml
+++ b/python/offset_ros/config/ros_agent_config.yaml
@@ -29,7 +29,9 @@ start_pos:
     psi: 0.0
 
 # dynamics model used in filters
-dynamics: 'lin_ncv'
+dynamics: 
+    lin_ncv_3d:
+        coplanar: False
 
 # sensor models used in filters
 sensors:
