--- a/python/config/config.yaml
+++ b/python/config/config.yaml
@@ -24,23 +24,23 @@ agent_cfg:
             [14,16,17],[15,18,19],[15,20,21],[16,22,23],[16,24,25],[17,26,27],
             [17,28,29],[18],[18],[19],[19],[20],[20],[21],[21]]
     # conns: [[2],[2],[0,1,3],[2,4,5],[3],[3]]
-    dynamics_fxn: "lin_ncv"
+    dynamics_fxn: "lin_ncv_3d"
     sensors:
         lin_abs_pos:
             # agents: [0,5]
             agents: [13,14,17,18]
-            noise: [[1,0],[0,1]]
+            noise: [[1,0,0],[0,1,0],[0,0,1]]
         lin_rel_range:
             agents: "all"
-            noise: [[3,0],[0,3]]
+            noise: [[3,0,0],[0,3,0],[0,0,3]]
 
 baseline_cfg:
-    dynamics_fxn: "lin_ncv"
+    dynamics_fxn: "lin_ncv_3d"
     sensors:
         lin_abs_pos:
             # agents: [0,5]
             agents: [13,14,17,18]
-            noise: [[1,0],[0,1]]
+            noise: [[1,0,0],[0,1,0],[0,0,1]]
         lin_rel_range:
             agents: "all"
-            noise: [[3,0],[0,3]]
+            noise: [[3,0,0],[0,3,0],[0,0,3]]
