removed covariance union, improved sim data collect, added rel estimation performance to dataviz, updating plotting

--- a/python/config/config.yaml
+++ b/python/config/config.yaml
@@ -14,8 +14,8 @@ use_adaptive_tau: True
 fixed_rng: False
 
 # data compression techniques
-quantization: False
-diagonalization: False
+quantization: True
+diagonalization: True
 
 agent_cfg:
     conn_struct_type: "tree"
