--- a/python/ros_wrapper/config/ros_agent_config.yaml
+++ b/python/ros_wrapper/config/ros_agent_config.yaml
@@ -2,7 +2,8 @@
 
 # all connections in network -> read as connections[0] = agent 0's connections
 # connections: [[1,2,3],[0],[0],[0]]
-connections: [[1,2],[0],[0,3],[2]]
+# connections: [[1,2],[0],[0,3],[2]]
+connections: [[4,5],[3],[3,6],[5]]
 
 # update rate for et-ddf code
 agent_update_rate: 5 # [Hz]
@@ -13,6 +14,9 @@ msg_stats_rate: 1 # [hz]
 # event-triggering parameters
 delta: 1.5    # measurement-sharing Kalman innovation threshold param
 tau: 7         # covariance intersection uncertainty per state threshold
+
+# probability of dropping messages
+comm_drop_prob: 0.0
 
 # adaptive CI thresholding params
 use_adaptive_tau: True
@@ -36,8 +40,8 @@ dynamics:
 # sensor models used in filters
 sensors:
     gps:
-        agents: [0] # read as only agent 0 gets GPS
+        agents: [3] # read as only agent 3 gets GPS
         noise: [[1,0],[0,1]]
     lin_rel:
-        agents: [0,1,2,3]
+        agents: [3,4,5,6]
         noise: [[3,0],[0,3]]
