--- a/python/ros_wrapper/config/ros_agent_config.yaml
+++ b/python/ros_wrapper/config/ros_agent_config.yaml
@@ -3,19 +3,20 @@
 # all connections in network -> read as connections[0] = agent 0's connections
 # connections: [[1,2,3],[0],[0],[0]]
 # connections: [[1,2],[0],[0,3],[2]]
-connections: [[4,5],[3],[3,6],[5]]
+# connections: [[4,5],[3],[3,6],[5]]
+connections: [[4,5,6],[3],[3],[3]]
 
 # names and ids of vehicles
 active_vehicles: ['bluerov2_3','bluerov2_4','bluerov2_5','bluerov2_6']
 
 # update rate for et-ddf code
-agent_update_rate: 10 # [Hz]
+agent_update_rate: 5 # [Hz]
 
 # message statistics update rate
 msg_stats_rate: 1 # [hz]
 
 # event-triggering parameters
-delta: 0.5    # measurement-sharing Kalman innovation threshold param
+delta: 1.5    # measurement-sharing Kalman innovation threshold param
 tau: 5.0         # covariance intersection uncertainty per state threshold
 
 # probability of dropping messages
@@ -51,4 +52,4 @@ sensors:
         noise: [[1,0,0],[0,1,0],[0,0,1]]
     lin_rel:
         agents: [3,4,5,6]
-        noise: [[3,0,0],[0,3,0],[0,0,3]]
+        noise: [[1,0,0],[0,1,0],[0,0,1]]
