--- a/python/ros_wrapper/config/ros_agent_config.yaml
+++ b/python/ros_wrapper/config/ros_agent_config.yaml
@@ -10,7 +10,7 @@ connections: [[4,5,6],[3],[3],[3]]
 active_vehicles: ['bluerov2_3','bluerov2_4','bluerov2_5','bluerov2_6']
 
 # update rate for et-ddf code
-agent_update_rate: 5 # [Hz]
+agent_update_rate: 1 # [Hz]
 
 # message statistics update rate
 msg_stats_rate: 1 # [hz]
@@ -53,3 +53,6 @@ sensors:
     lin_rel:
         agents: [3,4,5,6]
         noise: [[1,0,0],[0,1,0],[0,0,1]]
+
+# control input topic -- expects TwistStamped messages
+control_input_topic: 'new_twist'
