--- a/config/measurements.yaml
+++ b/config/measurements.yaml
@@ -1,3 +1,42 @@
-measurement:
-  et_delta: 1.0
-  default_variance: 0.5
+measurements:
+  yaw:
+    low_et_delta: 0.3
+    high_et_delta: 1.0
+    default_sd: 0.5 # standard deviation
+    buffer_size: 1
+
+  depth:
+    low_et_delta: 0.3
+    high_et_delta: 1.0
+    default_sd: 0.01
+    buffer_size: 1
+
+  modem_range:
+    low_et_delta: 1.0
+    high_et_delta: 4.0
+    default_sd: 0.1
+    buffer_size: 1
+
+  modem_azimuth:
+    low_et_delta: 0.0
+    high_et_delta: 0.0 # always send azimuth variance
+    default_sd: dynamic # dynamic
+    buffer_size: 2
+
+  sonar_range:
+    low_et_delta: 1.0
+    high_et_delta: 4.0
+    default_sd: 0.3
+    buffer_size: 1
+
+  sonar_azimuth: # radians
+    low_et_delta: 0.3
+    high_et_delta: 1.0
+    default_sd: 0.1 
+    buffer_size: 1
+
+  sonar_elevation: # radians
+    low_et_delta: 0.3
+    high_et_delta: 1.0
+    default_sd: 0.1
+    buffer_size: 1
