--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
+  <depend>nav_msgs</depend>
   <exec_depend>message_runtime</exec_depend>
   <depend>rospy</depend>
 
