Added node to simulate sonar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,10 @@ project(etddf)
 
 find_package(catkin REQUIRED COMPONENTS
   rospy
-  message_generation
   geometry_msgs
   nav_msgs
+  std_msgs
+  message_generation
 )
 
 catkin_python_setup()
@@ -16,6 +17,7 @@ add_message_files(
    MeasurementPackage.msg
    AssetEstimate.msg
    NetworkEstimate.msg
+   Sonar.msg
 )
 
 add_service_files(
@@ -26,6 +28,7 @@ add_service_files(
 generate_messages(
   DEPENDENCIES
   nav_msgs
+  std_msgs
 )
 
 catkin_package(
