--- a/config/etddf.yaml
+++ b/config/etddf.yaml
@@ -4,6 +4,10 @@ update_rate: 4
 ## increases a measurements threshold to be added to the buffer by the given amount
 delta_tiers: [1, 2]
 
+## Measurement topics
+measurement_topics:
+  imu_ci: "odometry/filtered"
+
 ### Buffer space configurations ###
 buffer_space:
   capacity: 32 # Total capacity
