--- a/config/etddf.yaml
+++ b/config/etddf.yaml
@@ -22,9 +22,9 @@ default_starting_position:
   x: 0.0
   y: 0.0
   z: 1.0
-  body_forward_vel: 0.0
-  body_strafe_vel: 0.0
-  body_depth_vel: 0.0
+  x_vel: 0.0
+  y_vel: 0.0
+  z_vel: 0.0
 
 ### Process Noise Configurations ###
 process_noise:
@@ -32,23 +32,23 @@ process_noise:
     x: 0.01
     y: 0.01
     z: 0.01
-    body_forward_vel: 0.0
-    body_strafe_vel: 0.0
-    body_depth_vel: 0.0
+    x_vel: 0.0
+    y_vel: 0.0
+    z_vel: 0.0
   blueteam:
     x: 0.01
     y: 0.01
     z: 0.01
-    body_forward_vel: 0.0
-    body_strafe_vel: 0.0
-    body_depth_vel: 0.0
+    x_vel: 0.0
+    y_vel: 0.0
+    z_vel: 0.0
   redteam:
     x: 0.1
     y: 0.1
     z: 0.1
-    body_forward_vel: 0.0
-    body_strafe_vel: 0.0
-    body_depth_vel: 0.0
+    x_vel: 0.0
+    y_vel: 0.0
+    z_vel: 0.0
 
 ### Initial Uncertainty Configurations ###
 initial_uncertainty:
@@ -56,22 +56,22 @@ initial_uncertainty:
     x: 1.0
     y: 1.0
     z: 1.0
-    body_forward_vel: 1
-    body_strafe_vel: 1
-    body_depth_vel: 1
+    x_vel: 0.001
+    y_vel: 0.001
+    z_vel: 0.001
   # for asset positions provided to us through roslaunch params
   known_starting_position: 
     x: 1.0
     y: 1.0
     z: 1.0
-    body_forward_vel: 1
-    body_strafe_vel: 1
-    body_depth_vel: 1
+    x_vel: 0.001
+    y_vel: 0.001
+    z_vel: 0.001
   # asset positions not provided in roslaunch, including redteam
   unknown_starting_position: 
     x: 1000
     y: 1000
     z: 8
-    body_forward_vel: 1
-    body_strafe_vel: 1
-    body_depth_vel: 1
+    x_vel: 0.01
+    y_vel: 0.01
+    z_vel: 0.01
