--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.1"?>
 <package format="2">
   <name>etddf</name>
   <version>2.0.0</version>
@@ -12,6 +12,7 @@
   <build_depend>message_generation</build_depend>
   <depend>nav_msgs</depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>minau</exec_depend> <!-- sonar_processing_node -->
   <depend>rospy</depend>
 
   <export>
