Code is not working because of rebasing

--- a/config/measurements.yaml
+++ b/config/measurements.yaml
@@ -39,8 +39,10 @@ measurements:
     base_et_delta: 1.0
     default_sd: 0.3
     buffer_size: 2
+    missed_tolerance: 1
 
   dvl_y:
     base_et_delta: 1.0
     default_sd: 0.3
     buffer_size: 2
+    missed_tolerance: 1
