--- a/config/example.yaml
+++ b/config/example.yaml
@@ -12,7 +12,6 @@ default_starting_position:
   z_vel: 0.0
 delta_tiers:
 - 1
-- 2
 initial_uncertainty:
   known_starting_position:
     x: 1.0
@@ -36,9 +35,9 @@ initial_uncertainty:
     z: 8
     z_vel: 0.01
 measurement_topics:
-  dvl: dvl
+  dvl: None
   imu_ci: None
-  sonar: sonar_processing/target_list
+  sonar: None
 process_noise:
   blueteam:
     x: 0.01
