--- a/config/etddf.yaml
+++ b/config/etddf.yaml
@@ -7,7 +7,7 @@ delta_tiers: [1]
 ## Measurement topics
 measurement_topics:
   depth: "mavros/global_position/rel_alt"
-  imu_ci: "None" #"odometry/filtered"
+  imu_ci: "odometry/filtered"
   sonar: "None" #"sonar_processing/target_list"
 
 ### Buffer space configurations ###
@@ -31,12 +31,12 @@ default_starting_position:
 ### Process Noise Configurations ###
 process_noise:
   ownship:
-    x: 0.001
-    y: 0.001
-    z: 0.001
-    x_vel: 0.0
-    y_vel: 0.0
-    z_vel: 0.0
+    x: 0.01
+    y: 0.01
+    z: 0.01
+    x_vel: 0.000005
+    y_vel: 0.000005
+    z_vel: 0.000005
   blueteam:
     x: 0.0
     y: 0.0
