--- a/config/etddf.yaml
+++ b/config/etddf.yaml
@@ -8,7 +8,7 @@ delta_tiers: [1]
 measurement_topics:
   depth: "mavros/global_position/rel_alt"
   imu_ci: "odometry/filtered"
-  sonar: "None" #"sonar_processing/target_list"
+  sonar: "sonar_processing/target_list"
 
 ### Buffer space configurations ###
 buffer_space:
