--- a/config/measurements.yaml
+++ b/config/measurements.yaml
@@ -34,3 +34,15 @@ measurements:
     default_sd: 0.1
     buffer_size: 2
     missed_tolerance: 10
+
+  gps_x: 
+    base_et_delta: 1.0
+    default_sd: 0.1
+    buffer_size: 2
+    missed_tolerance: 10
+
+  gps_y: 
+    base_et_delta: 1.0
+    default_sd: 0.1
+    buffer_size: 2
+    missed_tolerance: 10
