--- a/config/etddf.yaml
+++ b/config/etddf.yaml
@@ -1,4 +1,4 @@
-update_rate: 10
+update_rate: 1
 
 ## Multipliers for Delta tiers
 ## increases a measurements threshold to be added to the buffer by the given amount
@@ -6,10 +6,10 @@ delta_tiers: [1]
 
 ## Measurement topics
 measurement_topics:
-  depth: "mavros/global_position/rel_alt"
-  imu_ci: "odometry/filtered"
-  # sonar: "sonar_processing/target_list"
-  sonar: "None"
+  depth: "baro"
+  imu_ci: "strapdown/intersection"
+  imu_est: "strapdown/estimate"
+  sonar: "None" # "sonar_processing/target_list"
 
 ### Buffer space configurations ###
 buffer_space:
@@ -32,12 +32,12 @@ default_starting_position:
 ### Process Noise Configurations ###
 process_noise:
   ownship:
-    x: 0.001
-    y: 0.001
-    z: 0.001
-    x_vel: 0.000005
-    y_vel: 0.000005
-    z_vel: 0.000005
+    x: 0.01
+    y: 0.01
+    z: 0.01
+    x_vel: 0.00005
+    y_vel: 0.00005
+    z_vel: 0.00005
   blueteam:
     x: 0.0
     y: 0.0
