--- a/config/etddf_temp.yaml
+++ b/config/etddf_temp.yaml
@@ -36,7 +36,7 @@ initial_uncertainty:
     z_vel: 1.0
 measurement_topics:
   depth: baro
-  dvl: None
+  dvl: dvl
   imu_ci: strapdown/intersection
   imu_est: strapdown/estimate
   sonar: sonar_processing/target_list
