--- a/config/etddf.yaml
+++ b/config/etddf.yaml
@@ -1,4 +1,4 @@
-update_rate: 1
+update_rate: 2
 
 ## Multipliers for Delta tiers
 ## increases a measurements threshold to be added to the buffer by the given amount
@@ -6,9 +6,9 @@ delta_tiers: [1]
 
 ## Measurement topics
 measurement_topics:
-  depth: "baro"
-  imu_ci: "strapdown/intersection"
-  imu_est: "strapdown/estimate"
+  depth: baro
+  imu_ci: strapdown/intersection
+  imu_est: strapdown/estimate
   sonar: "None" # "sonar_processing/target_list"
 
 ### Buffer space configurations ###
@@ -32,12 +32,12 @@ default_starting_position:
 ### Process Noise Configurations ###
 process_noise:
   ownship:
-    x: 0.01
-    y: 0.01
+    x: 0.001
+    y: 0.001
     z: 0.01
-    x_vel: 0.00005
-    y_vel: 0.00005
-    z_vel: 0.00005
+    x_vel: 0.001
+    y_vel: 0.001
+    z_vel: 0.1
   blueteam:
     x: 0.0
     y: 0.0
@@ -56,12 +56,12 @@ process_noise:
 ### Initial Uncertainty Configurations ###
 initial_uncertainty:
   ownship:
-    x: 0.0
-    y: 0.0
-    z: 0.0
-    x_vel: 0.0
-    y_vel: 0.0
-    z_vel: 0.0
+    x: 1.0
+    y: 1.0
+    z: 1.0
+    x_vel: 0.2
+    y_vel: 0.2
+    z_vel: 0.2
   # for asset positions provided to us through roslaunch params
   known_starting_position: 
     x: 0.0
