--- a/config/etddf_sonar.yaml
+++ b/config/etddf_sonar.yaml
@@ -13,7 +13,7 @@ measurement_topics:
   depth: "baro" # "mavros/global_position/rel_alt" # baro
   imu_ci: "None"
   imu_est: "odometry/filtered" #"pose_gt" # "mavros/global_position/local"
-  sonar: "None" # "sonar_processing/target_list/associated"
+  sonar: "sonar_processing/target_list/associated"
   add_depth_bias: False # Add depth bias in hardware to keep the agent from bottominng out
 
 ### Buffer space configurations ###
