--- a/config/etddf_temp.yaml
+++ b/config/etddf_temp.yaml
@@ -21,12 +21,12 @@ initial_uncertainty:
     z: 0.0
     z_vel: 0.0
   ownship:
-    x: 0.0
-    x_vel: 0.0
-    y: 0.0
-    y_vel: 0.0
-    z: 0.0
-    z_vel: 0.0
+    x: 1.0
+    x_vel: 0.2
+    y: 1.0
+    y_vel: 0.2
+    z: 1.0
+    z_vel: 0.2
   unknown_starting_position:
     x: 1000
     x_vel: 1.0
@@ -35,11 +35,12 @@ initial_uncertainty:
     z: 8
     z_vel: 1.0
 measurement_topics:
+  add_depth_bias: false
   depth: baro
   dvl: dvl
   imu_ci: strapdown/intersection
   imu_est: strapdown/estimate
-  sonar: sonar_processing/target_list
+  sonar: sonar_processing/target_list/associated
 process_noise:
   blueteam:
     x: 0.0
@@ -49,12 +50,12 @@ process_noise:
     z: 0.0
     z_vel: 0.0
   ownship:
-    x: 0.01
-    x_vel: 5.0e-05
-    y: 0.01
-    y_vel: 5.0e-05
+    x: 0.001
+    x_vel: 0.001
+    y: 0.001
+    y_vel: 0.001
     z: 0.01
-    z_vel: 5.0e-05
+    z_vel: 0.1
   redteam:
     x: 0.1
     x_vel: 0.05
@@ -62,5 +63,5 @@ process_noise:
     y_vel: 0.05
     z: 0.1
     z_vel: 0.05
-update_rate: 1
+update_rate: 2
 use_control_input: false
