Added setpoint utilitiy scripts. Fixed some other issues.

--- a/config/etddf_sonar.yaml
+++ b/config/etddf_sonar.yaml
@@ -10,7 +10,7 @@ delta_tiers: [1]
 
 ## Measurement topics
 measurement_topics:
-  depth: "baro" # "mavros/global_position/rel_alt" # baro
+  depth: "mavros/global_position/rel_alt" # "baro"
   imu_ci: "None"
   imu_est: "odometry/filtered" #"pose_gt" # "mavros/global_position/local"
   sonar: "sonar_processing/target_list/associated"
